Add outline summaries and mind map trees for strategic frameworks and accelerating progress sections

--- a/pages/writing-opinion/values-creation/10-legacy-and-long-term-impact-vn.html
+++ b/pages/writing-opinion/values-creation/10-legacy-and-long-term-impact-vn.html
@@ -151,6 +151,49 @@
                 </p>
             </div>
 
+            <!-- Outline summary notes -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+                <ul>
+                    <li>Di sản không bắt buộc; chỉ xuất hiện khi ta đủ vững và còn dư năng lượng.</li>
+                    <li>Giá trị lớn hơn khi có nhiều người cùng thực hiện và tiếp nối.</li>
+                    <li>Dẫn dắt hiệu quả bằng gương mẫu: nói – làm – kết quả thống nhất.</li>
+                    <li>Cố vấn giúp người khác đi nhanh hơn, không tạo bản sao.</li>
+                    <li>Tài liệu hóa để giá trị không biến mất theo thời gian.</li>
+                    <li>Di sản là khả năng để giá trị tiếp tục sống khi ta vắng mặt.</li>
+                </ul>
+            </div>
+
+            <!-- Text Mind Map Tree -->
+            <div class="sub-section">
+                <details class="mm-text-tree-details">
+                    <summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+                    <pre class="mm-text-tree">
+10. DI SẢN VÀ TÁC ĐỘNG LÂU DÀI
+├─ Luận điểm trung tâm
+│  └─ Giá trị có thể tiếp tục sống ngoài phạm vi cá nhân
+│
+├─ Không bắt buộc, chỉ khi có thể
+│  └─ Di sản không sinh từ áp lực
+│
+├─ Giá trị vượt ra ngoài cá nhân
+│  └─ Lặp lại bởi nhiều người → tạo tác động
+│
+├─ Dẫn dắt bằng gương mẫu
+│  └─ Nhất quán giữa nói - làm - kết quả
+│
+├─ Cố vấn
+│  └─ Giúp người khác đi nhanh hơn, vẫn độc lập
+│
+├─ Tài liệu hóa
+│  └─ Ghi lại để tiếp nối và chống lãng quên
+│
+└─ Kết
+   └─ Di sản là giá trị tiếp tục khi ta không còn trực tiếp tham gia
+                    </pre>
+                </details>
+            </div>
+
         </section>
     </article>
     <script src="settings.js"></script>
