--- a/pages/writing-opinion/values-creation/10-legacy-and-long-term-impact.html
+++ b/pages/writing-opinion/values-creation/10-legacy-and-long-term-impact.html
@@ -151,6 +151,49 @@
                 </p>
             </div>
 
+            <!-- Outline summary notes -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">Outline summary notes</h3>
+                <ul>
+                    <li>Legacy is optional and arises only when we have surplus energy.</li>
+                    <li>Value grows when many people can repeat and continue it.</li>
+                    <li>Leading by example aligns words, actions, and observable results.</li>
+                    <li>Mentoring helps others move faster without creating copies.</li>
+                    <li>Documentation preserves value beyond memory and time.</li>
+                    <li>Legacy means value continues after we no longer participate directly.</li>
+                </ul>
+            </div>
+
+            <!-- Text Mind Map Tree -->
+            <div class="sub-section">
+                <details class="mm-text-tree-details">
+                    <summary class="sub-point-1">Text mind map (tree)</summary>
+                    <pre class="mm-text-tree">
+10. LEGACY AND LONG-TERM IMPACT
+├─ Central claim
+│  └─ Value can continue beyond the creator
+│
+├─ Not required, only if possible
+│  └─ Legacy should not come from pressure
+│
+├─ Value beyond the individual
+│  └─ Repetition by many creates impact
+│
+├─ Leading by example
+│  └─ Consistency of words, actions, results
+│
+├─ Mentoring
+│  └─ Help others go faster without copying you
+│
+├─ Documentation
+│  └─ Preserve value beyond memory
+│
+└─ Conclusion
+   └─ Legacy is value continuing after direct involvement ends
+                    </pre>
+                </details>
+            </div>
+
         </section>
     </article>
     <script src="settings.js"></script>
