--- a/pages/writing-opinion/values-creation/11-practical-lessons-reflections-vn.html
+++ b/pages/writing-opinion/values-creation/11-practical-lessons-reflections-vn.html
@@ -34,6 +34,44 @@
 
             </div>
 
+            <!-- Outline summary notes -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+                <ul>
+                    <li>Chương này không áp đặt “công thức” thành công từ người khác.</li>
+                    <li>Tránh thiên kiến cá nhân khi diễn giải câu chuyện thành công.</li>
+                    <li>Giữ chương mở để người đọc tự quan sát và kiểm chứng.</li>
+                    <li>Có thể tồn tại những con đường thành công khác biệt hoặc trái ngược.</li>
+                    <li>Giá trị là hành trình tự thân; mọi thứ chỉ nên xem như tham khảo.</li>
+                    <li>Kiến thức thực sự nằm ở việc biến điều học được thành của mình.</li>
+                </ul>
+            </div>
+
+            <!-- Text Mind Map Tree -->
+            <div class="sub-section">
+                <details class="mm-text-tree-details">
+                    <summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+                    <pre class="mm-text-tree">
+11. NHỮNG BÀI HỌC THỰC TẾ VÀ SUY NGẪM
+├─ Luận điểm trung tâm
+│  └─ Không có công thức chung; mỗi người tự kiểm chứng
+│
+├─ Tránh thiên kiến cá nhân
+│  └─ Không gán đời sống người khác vào khuôn mẫu sẵn có
+│
+├─ Chương mở
+│  └─ Người đọc tự quan sát và đối chiếu
+│
+├─ Nhiều con đường thành công
+│  └─ Có thể khác hoặc trái ngược
+│
+└─ Kết
+   ├─ Giá trị là hành trình tự thân
+   └─ Kiến thức trở thành của mình qua trải nghiệm
+                    </pre>
+                </details>
+            </div>
+
         </section>
     </article>
     <script src="settings.js"></script>
