--- a/pages/writing-opinion/values-creation/11-practical-lessons-reflections.html
+++ b/pages/writing-opinion/values-creation/11-practical-lessons-reflections.html
@@ -34,6 +34,44 @@
 
             </div>
 
+            <!-- Outline summary notes -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">Outline summary notes</h3>
+                <ul>
+                    <li>This chapter avoids imposing a success “formula.”</li>
+                    <li>Personal bias can distort how we interpret others’ success.</li>
+                    <li>The chapter remains open for readers to observe and test.</li>
+                    <li>There may be different or even opposite paths to success.</li>
+                    <li>The value path is personal; everything here is reference.</li>
+                    <li>Knowledge becomes real when we make it our own through experience.</li>
+                </ul>
+            </div>
+
+            <!-- Text Mind Map Tree -->
+            <div class="sub-section">
+                <details class="mm-text-tree-details">
+                    <summary class="sub-point-1">Text mind map (tree)</summary>
+                    <pre class="mm-text-tree">
+11. PRACTICAL LESSONS AND REFLECTIONS
+├─ Central claim
+│  └─ No single formula; each person must verify for themselves
+│
+├─ Avoid personal bias
+│  └─ Do not force lives into pre-made patterns
+│
+├─ Open chapter
+│  └─ Readers observe, compare, and test
+│
+├─ Multiple paths
+│  └─ Success can follow different or opposite routes
+│
+└─ Conclusion
+   ├─ Value is a personal journey
+   └─ Knowledge becomes ours through experience
+                    </pre>
+                </details>
+            </div>
+
         </section>
     </article>
     <script src="settings.js"></script>
