--- a/pages/writing-opinion/values-creation/8-0-strategic-frameworks-vn.html
+++ b/pages/writing-opinion/values-creation/8-0-strategic-frameworks-vn.html
@@ -25,6 +25,45 @@
 
                 <p>Chiến lược, trong cách tiếp cận này, không phải là bản kế hoạch bất biến, mà là một <strong>giả thuyết sống</strong>: được hình thành từ hiểu biết, được kiểm chứng bằng hành động, và được nuôi dưỡng bằng khả năng học hỏi và tự hiệu chỉnh. Chỉ khi đó, giá trị mới có thể tích lũy một cách bền vững, thay vì phụ thuộc vào cảm hứng hay nỗ lực nhất thời.</p>
             </div>
+
+            <!-- Outline summary notes -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+                <ul>
+                    <li>Nhiều mục tiêu và chiến lược vẫn không tạo ra giá trị.</li>
+                    <li>Vấn đề là chưa đi trọn từ giá trị đến hành động và thiếu cơ chế tự điều chỉnh.</li>
+                    <li>Khung chiến lược nối: mục tiêu → vấn đề → lựa chọn → hành vi hằng ngày.</li>
+                    <li>Chiến lược là “giả thuyết sống”: hình thành, kiểm chứng, và tự hiệu chỉnh.</li>
+                    <li>Giá trị bền vững đến từ học hỏi và điều chỉnh, không chỉ nỗ lực nhất thời.</li>
+                </ul>
+            </div>
+
+            <!-- Text Mind Map Tree -->
+            <div class="sub-section">
+                <details class="mm-text-tree-details">
+                    <summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+                    <pre class="mm-text-tree">
+8. KHUNG CHIẾN LƯỢC (META)
+├─ Luận điểm trung tâm
+│  └─ Cần nối mục tiêu với hành động và cơ chế tự điều chỉnh
+│
+├─ Vấn đề hiện trạng
+│  ├─ Mục tiêu và chiến lược không thiếu
+│  └─ Giá trị vẫn không xuất hiện
+│
+├─ Liên kết cốt lõi
+│  ├─ Điều ta theo đuổi
+│  ├─ Vấn đề cần giải quyết
+│  ├─ Lựa chọn đưa ra
+│  └─ Hành vi hằng ngày
+│
+└─ Chiến lược là “giả thuyết sống”
+   ├─ Hình thành từ hiểu biết
+   ├─ Kiểm chứng bằng hành động
+   └─ Nuôi dưỡng bằng học hỏi và tự hiệu chỉnh
+                    </pre>
+                </details>
+            </div>
         </section>
     </article>
     <script src="settings.js"></script>
