--- a/pages/writing-opinion/values-creation/8-0-strategic-frameworks.html
+++ b/pages/writing-opinion/values-creation/8-0-strategic-frameworks.html
@@ -25,6 +25,45 @@
 
                 <p>Strategy, in this approach, is not a fixed plan, but a <strong>living hypothesis</strong>: formed from understanding, tested through action, and sustained by the ability to learn and self-correct. Only then can value accumulate sustainably, instead of depending on inspiration or momentary effort.</p>
             </div>
+
+            <!-- Outline summary notes -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">Outline summary notes</h3>
+                <ul>
+                    <li>Many goals and strategies still fail to create value.</li>
+                    <li>The gap is the unfinished path from value to action and weak self-correction.</li>
+                    <li>The framework links: pursuit → problem → choice → daily behavior.</li>
+                    <li>Strategy is a “living hypothesis”: formed, tested, self-corrected.</li>
+                    <li>Sustainable value depends on learning and adjustment, not momentary effort.</li>
+                </ul>
+            </div>
+
+            <!-- Text Mind Map Tree -->
+            <div class="sub-section">
+                <details class="mm-text-tree-details">
+                    <summary class="sub-point-1">Text mind map (tree)</summary>
+                    <pre class="mm-text-tree">
+8. STRATEGIC FRAMEWORKS (META)
+├─ Central claim
+│  └─ Link goals to action with self-correction
+│
+├─ Current gap
+│  ├─ Goals and strategies are plenty
+│  └─ Value still fails to appear
+│
+├─ Core linkage
+│  ├─ What we pursue
+│  ├─ Problems to solve
+│  ├─ Choices we make
+│  └─ Daily behavior
+│
+└─ Strategy as a “living hypothesis”
+   ├─ Formed from understanding
+   ├─ Tested through action
+   └─ Sustained by learning and self-correction
+                    </pre>
+                </details>
+            </div>
         </section>
     </article>
     <script src="settings.js"></script>
