--- a/pages/writing-opinion/values-creation/8-1-strategic-frameworks-1-vn.html
+++ b/pages/writing-opinion/values-creation/8-1-strategic-frameworks-1-vn.html
@@ -115,6 +115,58 @@
             <p>SMART không giúp ta chọn mục tiêu đúng; nó chỉ khiến ta không thể tự dối mình về mục tiêu đã chọn.</p>
         </div>
 
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+            <ul>
+                <li>Mục tiêu là điểm đến để tránh lạc hướng trong hành trình giá trị.</li>
+                <li>Giá trị mục tiêu phản ánh cách sống; điều cốt lõi là không gây hại.</li>
+                <li>Chưa rõ mục tiêu: đầu tư sức khỏe và trí tuệ như điểm tựa an toàn.</li>
+                <li>Mục tiêu là phương tiện chuyển giá trị trừu tượng thành hành động.</li>
+                <li>Bắt đầu với mục tiêu vừa sức; tiến chậm còn hơn đứng yên.</li>
+                <li>MVP: khởi đầu nhỏ để học hỏi và điều chỉnh.</li>
+                <li>Mục tiêu cần linh hoạt khi bối cảnh thay đổi.</li>
+                <li>Phân biệt mong muốn và nhu cầu để tránh mục tiêu mong manh.</li>
+                <li>SMART là kỷ luật tư duy giúp mục tiêu rõ và không tự dối mình.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+                <pre class="mm-text-tree">
+8. KHUNG CHIẾN LƯỢC - THIẾT LẬP MỤC TIÊU
+├─ Mục tiêu như điểm đến
+│  └─ Biết mình đi về đâu để tránh chơi vơi
+│
+├─ Giá trị mục tiêu và cách sống
+│  └─ Mục tiêu phản ánh hệ giá trị; không gây hại
+│
+├─ Khi chưa rõ mục tiêu
+│  └─ Rèn sức khỏe và trí tuệ
+│
+├─ Từ giá trị đến mục tiêu cụ thể
+│  └─ Mục tiêu là phương tiện tạo giá trị
+│
+├─ Bắt đầu từ mục tiêu vừa sức
+│  └─ Tiến chậm còn hơn đứng yên
+│
+├─ MVP - bắt đầu khi chưa hoàn hảo
+│  └─ Khởi đầu nhỏ để học hỏi
+│
+├─ Mục tiêu không bất biến
+│  └─ Linh hoạt theo bối cảnh
+│
+├─ Phân biệt mong muốn và nhu cầu
+│  └─ Nhu cầu nền tảng quyết định khả năng đi xa
+│
+└─ SMART
+   └─ Kỷ luật tư duy: Specific, Measurable, Achievable, Relevant, Time-bound
+                </pre>
+            </details>
+        </div>
+
     </section>
 
 </article>
