--- a/pages/writing-opinion/values-creation/8-1-strategic-frameworks-1.html
+++ b/pages/writing-opinion/values-creation/8-1-strategic-frameworks-1.html
@@ -115,6 +115,58 @@
             <p>SMART does not help us choose the right goal; it only prevents us from deceiving ourselves about the goal we chose.</p>
         </div>
 
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Outline summary notes</h3>
+            <ul>
+                <li>Goals are destinations that prevent drifting in the value journey.</li>
+                <li>Target value reflects how we live; the core is not harming others.</li>
+                <li>When unclear, invest in health and intelligence as safe anchors.</li>
+                <li>Goals translate abstract value into concrete action points.</li>
+                <li>Start with achievable goals; slow progress beats standing still.</li>
+                <li>MVP: begin small to learn and adjust.</li>
+                <li>Goals are flexible when context changes.</li>
+                <li>Distinguish wants from needs to avoid fragile goals.</li>
+                <li>SMART is a thinking discipline that keeps goals honest.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Text mind map (tree)</summary>
+                <pre class="mm-text-tree">
+8. STRATEGIC FRAMEWORKS - GOAL SETTING
+├─ Goals as destinations
+│  └─ Prevent drifting and give direction
+│
+├─ Target value and how we live
+│  └─ Goal size matters less than non-harm
+│
+├─ When value is unclear
+│  └─ Build health and intelligence as anchors
+│
+├─ From value to goals
+│  └─ Goals are means, not the value itself
+│
+├─ Start with achievable goals
+│  └─ Slow progress beats standing still
+│
+├─ MVP
+│  └─ Start small, learn, adjust
+│
+├─ Goals are not immutable
+│  └─ Adjust when context changes
+│
+├─ Wants vs needs
+│  └─ Needs determine how far we can go
+│
+└─ SMART
+   └─ Specific, Measurable, Achievable, Relevant, Time-bound
+                </pre>
+            </details>
+        </div>
+
     </section>
 
 </article>
