--- a/pages/writing-opinion/values-creation/8-2-strategic-frameworks-2-vn.html
+++ b/pages/writing-opinion/values-creation/8-2-strategic-frameworks-2-vn.html
@@ -176,6 +176,52 @@
             </p>
         </div>
 
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+            <ul>
+                <li>Tư duy chiến lược cần thiết khi nỗ lực không tự tạo kết quả.</li>
+                <li>Chiến lược bắt đầu từ việc xác định vấn đề cốt lõi.</li>
+                <li>Phân biệt hiện tượng và nguyên nhân; ưu tiên một vấn đề cốt lõi tại một thời điểm.</li>
+                <li>Đặt vấn đề vào đúng bối cảnh: bên ngoài và năng lực nội tại.</li>
+                <li>SWOT giúp nhìn tổng thể, quan trọng là kết nối với vấn đề cốt lõi.</li>
+                <li>Mở rộng không gian giải pháp trước khi chọn hướng đi.</li>
+                <li>Cân nhắc đánh đổi qua chi phí, thời gian, nguồn lực và ROI.</li>
+                <li>Chuyển hóa lựa chọn thành hành động khả thi là bước then chốt.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+                <pre class="mm-text-tree">
+8. KHUNG CHIẾN LƯỢC - TỪ MỤC TIÊU ĐẾN LỰA CHỌN CHIẾN LƯỢC
+├─ Vì sao cần tư duy chiến lược
+│  └─ Khi mục tiêu không tự thành hình
+│
+├─ Xác định vấn đề cốt lõi
+│  ├─ Phân biệt hiện tượng và nguyên nhân
+│  └─ Xử lý một vấn đề quan trọng nhất
+│
+├─ Đặt vấn đề vào đúng bối cảnh
+│  └─ Bên ngoài + năng lực nội tại
+│
+├─ Công cụ hỗ trợ nhìn tổng thể
+│  └─ SWOT, kết nối với vấn đề cốt lõi
+│
+├─ Mở rộng không gian giải pháp
+│  └─ Hiếm khi chỉ có một cách duy nhất
+│
+├─ Cân nhắc đánh đổi và đo lường
+│  └─ Chi phí, thời gian, nguồn lực, ROI
+│
+└─ Chuyển hóa thành hành động khả thi
+   └─ Từ mục tiêu đến hành động là quá trình
+                </pre>
+            </details>
+        </div>
+
     </section>
 
 </article>
