--- a/pages/writing-opinion/values-creation/8-2-strategic-frameworks-2.html
+++ b/pages/writing-opinion/values-creation/8-2-strategic-frameworks-2.html
@@ -176,6 +176,52 @@
             </p>
         </div>
 
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Outline summary notes</h3>
+            <ul>
+                <li>Strategic thinking is needed when effort alone doesn’t yield results.</li>
+                <li>Strategy begins by identifying the core problem.</li>
+                <li>Separate symptoms from causes; solve one core problem at a time.</li>
+                <li>Place the problem in context: external realities and internal capability.</li>
+                <li>SWOT helps see the whole picture; connect it to the core problem.</li>
+                <li>Expand the solution space before deciding.</li>
+                <li>Weigh trade-offs in cost, time, resources, and ROI.</li>
+                <li>Translate choices into feasible action through a process, not a leap.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Text mind map (tree)</summary>
+                <pre class="mm-text-tree">
+8. STRATEGIC FRAMEWORKS - FROM GOALS TO STRATEGIC CHOICES
+├─ Why strategic thinking is needed
+│  └─ When goals don't emerge from effort alone
+│
+├─ Identify the core problem
+│  ├─ Separate symptoms from root causes
+│  └─ Focus on one core problem at a time
+│
+├─ Place the problem in context
+│  └─ External realities + internal capability
+│
+├─ Tools to see the whole picture
+│  └─ SWOT, linked to the core problem
+│
+├─ Expand the solution space
+│  └─ Rarely only one way
+│
+├─ Weigh trade-offs
+│  └─ Cost, time, resources, ROI
+│
+└─ Translate into feasible action
+   └─ From goals to action is a process
+                </pre>
+            </details>
+        </div>
+
     </section>
 
 </article>
