--- a/pages/writing-opinion/values-creation/8-3-strategic-frameworks-3-vn.html
+++ b/pages/writing-opinion/values-creation/8-3-strategic-frameworks-3-vn.html
@@ -269,6 +269,54 @@
             Và khi hành động đã được tổ chức thành một cơ chế học hỏi, giá trị bắt đầu tích lũy
             không còn phụ thuộc quá nhiều vào cảm hứng, mà dựa trên <b>nhịp cải tiến đều đặn</b>.
         </p>
+
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+            <ul>
+                <li>Chiến lược chỉ có giá trị khi được chuyển hóa thành hành động.</li>
+                <li>Khoảng trống nằm ở việc biến lựa chọn trừu tượng thành hành vi hằng ngày.</li>
+                <li>Ba nguyên tắc ưu tiên: tác động, thời điểm, bắt đầu dù chưa hoàn hảo.</li>
+                <li>Công cụ hành động: Impact–Effort, Action List, Time-boxing, WIP, Kanban, Weekly Review.</li>
+                <li>Chọn đúng việc, đúng thời điểm, với mức nỗ lực hợp lý.</li>
+                <li>Giá trị bền vững cần cơ chế thực thi ổn định, không chỉ nỗ lực rời rạc.</li>
+                <li>Công cụ tăng trưởng: PDCA, Five Dynamics of Growth, Three-Box Solution.</li>
+                <li>Chiến lược là quá trình học hỏi và tự hiệu chỉnh liên tục.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+                <pre class="mm-text-tree">
+8. KHUNG CHIẾN LƯỢC - TỪ CHIẾN LƯỢC ĐẾN HÀNH ĐỘNG
+├─ Khoảng trống chiến lược – hành động
+│  └─ Lựa chọn trừu tượng cần chuyển thành hành vi
+│
+├─ Ba nguyên tắc ưu tiên hành động
+│  ├─ Theo mức độ tác động
+│  ├─ Theo thời điểm
+│  └─ Bắt đầu khi chưa hoàn toàn rõ ràng
+│
+├─ Công cụ triển khai hành động
+│  ├─ Impact-Effort Matrix
+│  ├─ Action List
+│  ├─ Time-boxing
+│  ├─ WIP limit
+│  ├─ Personal Kanban
+│  └─ Weekly Review
+│
+├─ Tổ chức thành cơ chế thực thi ổn định
+│  └─ Giá trị tích lũy nhờ nhịp cải tiến đều đặn
+│
+└─ Công cụ để chiến lược không đứng yên
+   ├─ PDCA
+   ├─ Five Dynamics of Growth
+   └─ Three-Box Solution
+                </pre>
+            </details>
+        </div>
     </section>
 
 </article>
