--- a/pages/writing-opinion/values-creation/8-3-strategic-frameworks-3.html
+++ b/pages/writing-opinion/values-creation/8-3-strategic-frameworks-3.html
@@ -267,6 +267,54 @@
             And when action is organized into a learning mechanism, value begins to accumulate
             not by relying too much on inspiration, but on a <b>steady rhythm of improvement</b>.
         </p>
+
+        <!-- Outline summary notes -->
+        <div class="sub-section">
+            <h3 class="sub-point-1">Outline summary notes</h3>
+            <ul>
+                <li>Strategy creates value only when translated into action.</li>
+                <li>The gap lies in turning abstract choices into daily behavior.</li>
+                <li>Three priority principles: impact, timing, and starting before perfect clarity.</li>
+                <li>Action tools: Impact–Effort, Action List, Time-boxing, WIP, Kanban, Weekly Review.</li>
+                <li>Choose the right work at the right time with reasonable effort.</li>
+                <li>Sustainable value needs a stable execution mechanism, not scattered effort.</li>
+                <li>Growth tools: PDCA, Five Dynamics of Growth, Three-Box Solution.</li>
+                <li>Strategy is an ongoing learning and self-correction process.</li>
+            </ul>
+        </div>
+
+        <!-- Text Mind Map Tree -->
+        <div class="sub-section">
+            <details class="mm-text-tree-details">
+                <summary class="sub-point-1">Text mind map (tree)</summary>
+                <pre class="mm-text-tree">
+8. STRATEGIC FRAMEWORKS - FROM STRATEGY TO ACTION
+├─ Strategy–action gap
+│  └─ Abstract choices must become daily behavior
+│
+├─ Three principles for prioritization
+│  ├─ Impact
+│  ├─ Timing
+│  └─ Start before perfect clarity
+│
+├─ Action deployment tools
+│  ├─ Impact-Effort Matrix
+│  ├─ Action List
+│  ├─ Time-boxing
+│  ├─ WIP limit
+│  ├─ Personal Kanban
+│  └─ Weekly Review
+│
+├─ Build a stable execution mechanism
+│  └─ Value accumulates through steady improvement
+│
+└─ Tools to keep strategy moving
+   ├─ PDCA
+   ├─ Five Dynamics of Growth
+   └─ Three-Box Solution
+                </pre>
+            </details>
+        </div>
     </section>
 
 </article>
