--- a/pages/writing-opinion/values-creation/9-accelerating-progress-vn.html
+++ b/pages/writing-opinion/values-creation/9-accelerating-progress-vn.html
@@ -110,6 +110,46 @@
                 </p>
             </div>
 
+            <!-- Outline summary notes -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">Ghi chú tóm tắt (outline)</h3>
+                <ul>
+                    <li>Thiếu đà, không thiếu kiến thức, thường là lý do dừng lại.</li>
+                    <li>Chiến thắng nhỏ củng cố tâm lý và giúp không dừng lại.</li>
+                    <li>Trì hoãn đến từ mơ hồ, áp lực đúng, sợ phản hồi; cần hạ rào cản khởi động.</li>
+                    <li>Phản hồi là dữ liệu để tinh chỉnh, không phải phán xét.</li>
+                    <li>Vòng lặp Xây dựng - Đo lường - Học hỏi tạo căn cứ và giảm sai lệch.</li>
+                    <li>Tăng tốc đến từ nhịp cải tiến đều đặn, không phải vội vàng.</li>
+                </ul>
+            </div>
+
+            <!-- Text Mind Map Tree -->
+            <div class="sub-section">
+                <details class="mm-text-tree-details">
+                    <summary class="sub-point-1">Mind map dạng chữ (tree)</summary>
+                    <pre class="mm-text-tree">
+9. SỰ NHẤT QUÁN VÀ TĂNG TỐC TIẾN ĐỘ
+├─ Luận điểm trung tâm
+│  └─ Duy trì đà, tinh chỉnh hướng đi, học từ phản hồi
+│
+├─ Chiến thắng nhỏ
+│  └─ Củng cố tâm lý, giúp không dừng lại
+│
+├─ Vượt qua trì hoãn
+│  └─ Hạ rào cản để khởi động
+│
+├─ Vòng lặp phản hồi
+│  └─ Phản hồi là dữ liệu để điều chỉnh
+│
+├─ Xây dựng - Đo lường - Học hỏi
+│  └─ Biến giả định thành kiểm chứng
+│
+└─ Kết
+   └─ Nhất quán từ bước nhỏ, tăng tốc bằng cải tiến
+                    </pre>
+                </details>
+            </div>
+
         </section>
     </article>
     <script src="settings.js"></script>
