--- a/pages/writing-opinion/values-creation/9-accelerating-progress.html
+++ b/pages/writing-opinion/values-creation/9-accelerating-progress.html
@@ -110,6 +110,46 @@
                 </p>
             </div>
 
+            <!-- Outline summary notes -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">Outline summary notes</h3>
+                <ul>
+                    <li>Lack of momentum, not lack of knowledge, often causes stopping.</li>
+                    <li>Small wins reinforce psychology and keep us moving.</li>
+                    <li>Procrastination comes from ambiguity and fear; lower the start barrier.</li>
+                    <li>Feedback is data for refinement, not judgment.</li>
+                    <li>Build - Measure - Learn turns assumptions into testable learning.</li>
+                    <li>Acceleration comes from reducing deviation each loop, not rushing.</li>
+                </ul>
+            </div>
+
+            <!-- Text Mind Map Tree -->
+            <div class="sub-section">
+                <details class="mm-text-tree-details">
+                    <summary class="sub-point-1">Text mind map (tree)</summary>
+                    <pre class="mm-text-tree">
+9. CONSISTENCY AND ACCELERATING PROGRESS
+├─ Central claim
+│  └─ Sustain momentum, refine direction, learn from feedback
+│
+├─ Small wins
+│  └─ Psychological reinforcement to avoid stopping
+│
+├─ Overcoming procrastination
+│  └─ Lower the barrier to start
+│
+├─ Feedback loops
+│  └─ Treat feedback as data
+│
+├─ Build - Measure - Learn
+│  └─ Turn assumptions into testable learning
+│
+└─ Conclusion
+   └─ Consistency grows via small steps and awareness
+                    </pre>
+                </details>
+            </div>
+
         </section>
     </article>
     <script src="settings.js"></script>
