Update font size selector title for clarity and improve Vietnamese translation for compromise section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="logo-container">
                 <i class="fas fa-globe"></i>
                 <h1 class="logo">My Personal Planet </h1>
-                <select id="font-size-select" class="font-size-select font-size-default" aria-label="Font size">
+                <select id="font-size-select" class="font-size-select font-size-default" aria-label="Font size" title="This book was written with the support of AI as a thinking companion. The reflections, choices, and responsibility for the ideas remain entirely mine.">
                     <option value="default" class="default">AI</option>
                     <option value="larger" class="larger">AI</option>
                     <option value="large" class="large">AI</option>
