--- a/pages/reading-studying/leadership/leadership-vn.html
+++ b/pages/reading-studying/leadership/leadership-vn.html
@@ -79,7 +79,7 @@
                     <li><strong>Chiến đấu:</strong> Ưu tiên nhu cầu của bạn trước.</li>
                     <li><strong>Thích nghi:</strong> Ưu tiên nhu cầu của người khác, gạt nhu cầu của bạn sang một bên.</li>
                     <li><strong>Tránh né:</strong> Không tham gia vào nhu cầu của bạn cũng như của họ; bước ra ngoài.</li>
-                    <li><strong>타협:</strong> Mỗi bên nhận được điều gì đó, nhưng không phải tất cả những gì họ muốn.</li>
+                    <li><strong>Thỏa hiệp:</strong> Mỗi bên nhận được điều gì đó, nhưng không phải tất cả những gì họ muốn.</li>
                     <li><strong>Hợp tác:</strong> Tìm cách đáp ứng cả nhu cầu của bạn và của họ.</li>
                 </ul>
             </div>
